feat(escalas): motor unico com uma tabela de respostas e um calculo por instrumento (RF08 e RF21 a RF26)
tarefa com prazo que vence sem resposta, correcao do paciente ate a analise do prescritor e faixa do MEEM por escolaridade